--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ahmadfaryabkokab/laravel-docker:$(date +%s)
+      run: docker build . --file Dockerfile --tag ahmadfaryabkokab/laravel-docker:8.3-$(date +%s)
