--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,10 +4,14 @@ on:
   push:
     branches:
       - main
-
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    timeout-minutes: 120  # Increase timeout for large builds
+
+    env:
+      DOCKER_BUILDKIT: 1
+      COMPOSE_DOCKER_CLI_BUILD: 1
 
     steps:
       # Checkout the repository
@@ -21,18 +25,17 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build the Docker image
-      - name: Build Docker image
-        run: docker build -t ahmadfaryabkokab/laravel-docker:latest .
+      # Set up Docker Buildx for better performance
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-      # Push the Docker image to Docker Hub
-      - name: Push Docker image
-        run: docker push ahmadfaryabkokab/laravel-docker:latest
-
-      # Build the Docker image
-      - name: Build Docker image
-        run: docker build -t ahmadfaryabkokab/laravel-docker:8.3 .
-
-      # Push the Docker image to Docker Hub
-      - name: Push Docker image
-        run: docker push ahmadfaryabkokab/laravel-docker:8.3
+      # Build and push Docker image efficiently
+      - name: Build and Push Docker Image
+        run: |
+          docker buildx build \
+            --build-arg BUILDKIT_INLINE_CACHE=1 \
+            --compress \
+            --push \
+            --platform linux/amd64 \
+            -t ahmadfaryabkokab/laravel-docker:latest \
+            -t ahmadfaryabkokab/laravel-docker:8.3 .
